--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,50 @@
-/venv
+# Sistema
+*.log
+*.pot
+*.pyc
+*.pyo
+*.env
+*.coverage
+*.cover
+*.mo
+*.py,cover
+*.sqlite3
+
+# Configurações do editor
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
+
+# Diretórios do sistema operacional
+.DS_Store
+Thumbs.db
+
+# Virtualenv
+venv/
+ENV/
+env/
+
+# Arquivos de migração
+**/migrations/*
+
+# Diretório estático gerado automaticamente
+staticfiles/
+
+# Diretório media (arquivos carregados pelo usuário)
+media/
+
+# Arquivos de cache
+__pycache__/
+*.py[cod]
+*.so
+
+# Configuração local (se houver)
+local_settings.py
+
+# Arquivos do pytest
+.pytest_cache/
+
+# Arquivos criados pelo sistema
+*.swp
+*.swo
