--- a/.github/workflows/prod_grupofortiscesar.yml
+++ b/.github/workflows/prod_grupofortiscesar.yml
@@ -26,14 +26,25 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-      
+     
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r Projeto-FDS/requirements.txt
+
+      - name: Cleaning testing files
+        run: |
+          cd Projeto-FDA/
+          rm db.sqlite3
+          rm .env
+          cd ..
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd Projeto-FDS/
+          zip release.zip ./* -r
+          cd ..
+          mv Projeto-FDS/release.zip .
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
