--- a/.github/workflows/prod_grupofortisfds.yml
+++ b/.github/workflows/prod_grupofortisfds.yml
@@ -28,20 +28,16 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r mystackoverflow/requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Cleaning testing files
         run: |
-          cd SEUPROJETODJANGO/
           rm .env
           cd ..
 
       - name: Zip artifact for deployment
         run: |
-          cd mystackoverflow/
           zip release.zip ./* -r
-          cd ..
-          mv mystackoverflow/release.zip .
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
