--- a/.github/workflows/prod_projetofortis.yml
+++ b/.github/workflows/prod_projetofortis.yml
@@ -32,12 +32,10 @@ jobs:
 
       - name: Cleaning testing files
         run: |
+          cd SEUPROJETODJANGO/
+          rm db.sqlite3
           rm .env
           cd ..
-
-      - name: Zip artifact for deployment
-        run: |
-          zip release.zip ./* -r
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
